[package]
name = "loc"
version = "0.4.1"
description = "Count lines of code (cloc) fast."
authors = ["Curtis Gagliardi <curtis@curtis.io>"]

repository = "https://github.com/cgag/loc"
homepage = "https://github.com/cgag/loc"
documentation = "https://github.com/cgag/loc"

license="MIT"

[dependencies]
clap          = "2.32.0"
deque         = "0.3.2"
memchr        = "2.0.1"
regex         = "1.0.2"
num_cpus      = "1.8.0"
ignore        = "0.4.2"
edit-distance = "2.0.1"
# TODO(cgag): set explicit version
smallvec = "*"

[profile.release]
incremental = false
lto = true
